--- a/app/views/caseaccess/index.html
+++ b/app/views/caseaccess/index.html
@@ -42,7 +42,8 @@
                     <p><a target="_blank" href="/caseaccess/pages/email-rejected">Email notifcation - Task Rejected</a></p>
                     <h3 class="govuk-heading-s">Scenario E - Booking UI</h3>
                     <p><a target="_blank" href="/caseaccess/pages/booking?usertype=judiciary&">Booking UI</a><br>Select type of access - Subject to change</br></p>
-
+                    <p><a target="_blank" href="/caseaccess/pages/booking-location?usertype=judiciary&">Booking UI - location</a><br>Select location- Subject to change</br></p>
+<p><a target="_blank" href="/caseaccess/pages/booking-combo?usertype=judiciary&">Booking UI - Combo</a><br>Alternative design - both screesn combined - Subject to change</br></p>
             </div>
             <div>
                 <h2 class="govuk-heading-l">Staff</h2>
