--- a/app/views/caseaccess/pages/booking-location.html
+++ b/app/views/caseaccess/pages/booking-location.html
@@ -10,7 +10,7 @@ Case details
 <h1 class="govuk-heading-xl">Booking UI</h1>
 
 
-<h3 class="govuk-heading-m">Where are you working today
+<h3 class="govuk-heading-m">Area and location
 </h3>
     <div class="govuk-form-group">
     <label class="govuk-label govuk-!-font-size-19" for="sort"><strong>
