--- a/app/views/caseaccess/pages/mycases-p.html
+++ b/app/views/caseaccess/pages/mycases-p.html
@@ -79,7 +79,7 @@ My work
                   <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Amelia Chu</td>
                   <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
                   <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td>
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific</td>
                   <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Pending</td>
                   <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                   <td class="govuk-table__cell"></td>
