--- a/app/views/caseaccess/pages/mycases-r.html
+++ b/app/views/caseaccess/pages/mycases-r.html
@@ -80,7 +80,7 @@ My work
                   <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="PA-00321-2018-a"><Strong>Robert Saddlebrook</strong></a></td>
                   <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><Strong>Immigration and Asylum</Strong></td>
                   <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><Strong>Protection</Strong></td>
-                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><Strong>Reviewer</Strong></td>
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><Strong>Challenged</Strong></td>
                   <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><Strong>14 Mar 2021</Strong></td>
                   <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><Strong>14 Apr 2021</Strong></td>
                   <td class="govuk-table__cell"><a href="PA-00321-2018-a" class="right_">Go to case</a></td>
