--- a/app/views/caseaccess/pages/PA-00467-2017-ara.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-ara.html
@@ -14,7 +14,7 @@ Case details
   </svg>
   <div class="hmcts-banner__message">
     <span class="hmcts-banner__assistive">information</span>Specific access.<br>
-    You have been granted access for [duration]. Access to this case is logged for auditing purposes.
+    You have been granted access until midnight on 14 March 2021.  Access to this case is logged for auditing purposes.
   </div>
 </div>
 <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
@@ -126,8 +126,8 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific access</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Manchester</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Feb 2021</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Feb 2021</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Mar 2021</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Mar 2021</td>
                 <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
             </tr>
         </tbody>
