showing results for state

--- a/app/views/divorceserviceonly/citizen/solicitordetails.html
+++ b/app/views/divorceserviceonly/citizen/solicitordetails.html
@@ -323,7 +323,7 @@ Case details
         document.getElementById("noresultsshowing").style.display = "none";
         document.getElementById("manualdetails").style.display = "none";
         document.getElementById("normaldetails").style.display = "none";
-        document.getElementById("resultsshowing").style.display = "none";
+        document.getElementById("resultsshowing").style.display = "block";
 
         document.getElementById("resultsshowing1only").style.display = "none";
         document.getElementById("resultsshowing2only").style.display = "none";
