--- a/app/views/caseaccess/pages/PA-00321-2018-confirmation.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-confirmation.html
@@ -1,5 +1,5 @@
 {% if  data.usertype == 'judiciary'   %}
-{% extends "../layoutjudicial.html" %}
+{% extends "../layoutjudicial-c.html" %}
 {% else %}
 {% extends "../layoutstaff.html" %}
 {% endif %}
