--- a/app/views/caseaccess/pages/PA-00467-2017-t.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-t.html
@@ -108,7 +108,7 @@ Case details
               </tr>
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header">Manage</th>
-                <td class="govuk-table__cell"><a href="PA-00467-2017-tr">Review request</a></td>
+                <td class="govuk-table__cell"><a href="PA-00467-2017-tr-case">Assign task to me</a></td>
               </tr>
             </tbody>
           </table>
