--- a/app/views/caseaccess/pages/PA-00467-2017-tca.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tca.html
@@ -36,17 +36,17 @@ Case details
     </h2>
     <ul class="govuk-tabs__list">
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="PA-00467-2017-tca">
+        <a class="govuk-tabs__tab" href="#">
           Tasks
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="PA-00467-2017-araa">
+        <a class="govuk-tabs__tab" href="#">
           Roles / access
         </a>
       </li>
       <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
-        <a class="govuk-tabs__tab" href="PA-00467-2017-atc">
+        <a class="govuk-tabs__tab" href="#">
           Overview
         </a>
       </li>
