--- a/app/views/caseaccess/pages/PA-00467-2017-trac-case.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trac-case.html
@@ -99,7 +99,7 @@ Case details
                 Their details will appear under the role and access tab.
               </p>
               <p class="govuk-body">
-                <a href="\caseaccess\pages\available-tasks-s2b" class="govuk-link">Back to available tasks</a>
+                <a href="\caseaccess\pages\PA-00467-2017-tca" class="govuk-link">Back to tasks</a>.
               </p>
             </div>
           </div>
