--- a/app/views/caseaccess/pages/PA-00467-2017-trrc-case.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trrc-case.html
@@ -18,7 +18,7 @@ Case details
                 The requester has been denied access to this case.
               </p>
               <p class="govuk-body">
-                <a href="/caseaccess/pages/available-tasks-s2b" class="govuk-link">Back to available tasks</a>.
+                <a href="/caseaccess/pages/PA-00467-2017-tca" class="govuk-link">Back to tasks</a>.
               </p>
             </div>
           </div>
