--- a/app/views/caseaccess/pages/PA-00467-2017-tra-case.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tra-case.html
@@ -6,9 +6,11 @@
 {% block pageTitle %}
 Case details
 {% endblock %}
+{% block beforeContent %}
+<a href="/caseaccess/pages/PA-00467-2017-tr-case" class="govuk-back-link">Back</a>
+{% endblock %}
 
 {% block content %}
-
 <!-- <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
   <div class="" style="display: flex; justify-content: space-between; ">
     <div> -->
@@ -88,79 +90,100 @@ Case details
       </li> -->
   <!--  </ul> -->
   <!--  <div class="govuk-tabs__panel" id="event" style="display: padding: 0px; border-bottom: 0px; border-right: 0px; border-left: 0px;">
-      <div > -->
-      <div class="govuk-grid-row">
+    -->  <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-          <h2 class="govuk-heading-l  govuk-!-margin-bottom-2">Review specific access request</h2>
-          <p></p>
-          <table class="govuk-table">
-            <tbody class="govuk-table__body">
-              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Case name</th>
-                <td class="govuk-table__cell">Amelia Chu</td>
-              </tr>
-              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Case reference</th>
-                <td class="govuk-table__cell">PA/00467/2017</td>
-              </tr>
-              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Request from</th>
-                <td class="govuk-table__cell">Judge Randel-Combeswardly</td>
-              </tr>
-              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Date submitted</th>
-                <td class="govuk-table__cell">DD/MM/YYYY</td>
-              </tr>
-              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Reason for access</th>
-                <td class="govuk-table__cell">
-Reason A          </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-  <form action="#" method="post" onsubmit="usePage(this, 'bob');">
-    <div class="govuk-form-group">
-      <fieldset class="govuk-fieldset">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-          <h1 class="govuk-fieldset__heading">
-            What would you like to do with this request?
-          </h1>
-        </legend>
-        <div class="govuk-radios">
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live" name="bob" type="radio" value="/caseaccess/pages/PA-00467-2017-tra">
-            <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-              Approve request
-            </label>
-          </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="/caseaccess/pages/PA-00467-2017-trr">
-            <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-              Reject request
-            </label>
-          </div>
-        </div>
-      </fieldset>
+    {% set setDuration %}
+    {{ govukDateInput({
+      id: "passport-issued",
+      namePrefix: "passport-issued",
+      fieldset: {
+        legend: {
+          text: "Access starts",
+          classes: "govuk-fieldset__legend--m"
+        }
+      },
+      hint: {
+        text: "For example, 12 11 2007"
+      }
+    }) }}
+    {{ govukDateInput({
+    id: "passport-issued",
+    namePrefix: "passport-issued",
+    fieldset: {
+    legend: {
+    text: "Access ends",
+    classes: "govuk-fieldset__legend--m"
+    }
+    },
+    hint: {
+    text: "For example, 12 11 2007"
+    }
+    }) }}
+    {% endset -%}
+    {% set textHtml %}
+    {{ govukInput({
+      id: "contact-by-text",
+      name: "contact-by-text",
+      type: "tel",
+      classes: "govuk-!-width-one-third",
+      label: {
+        text: "Mobile phone number"
+      }
+    }) }}
+    {% endset -%}
+    {{ govukRadios({
+      idPrefix: "contact",
+      name: "contact",
+      fieldset: {
+        legend: {
+          text: "Grant duration of case access",
+          isPageHeading: true,
+          classes: "govuk-fieldset__legend--l"
+        }
+      },
+      hint: {
+        text: ""
+      },
+      items: [
+
+        {
+          value: "phone",
+          text: "7 days ",
+          hint: {
+        text: "Starts from today and ends at midnight on 7th day."
+      }
+      },
+
+        {
+          value: "phone",
+          text: "Other duration",
+          hint: {
+        text: "You’ll need to specify both start and end date."
+      },
+          conditional: {
+            html: setDuration
+          }
+        },
+        {
+          value: "phone",
+          text: "Indefinite access",
+          hint: {
+        text: "Starts from today and lasts whilst case is open."
+      }
+      }
+      ]
+    }) }}
+    <div class="govuk-button-group">
+    {{ govukButton({
+      text: "Submit",
+      classes: "govuk-!-margin-right-3",
+      href: "/caseaccess/pages/PA-00467-2017-trac-case"
+    }) }}
+    {{ govukButton({
+        text: "Cancel and unassign task",
+        href: "/caseaccess/pages/PA-00467-2017-t",
+        classes: "govuk-button--secondary"
+      }) }}</div>
     </div>
-  <div class="govuk-button-group">
-  {{ govukButton({
-    text: "Continue",
-    classes: "govuk-!-margin-right-3"
-  }) }}
-  {{ govukButton({
-    text: "Cancel and unassign task",
-    href: "/caseaccess/pages/available-tasks-s2o",
-    classes: "govuk-button--secondary"
-  }) }}
-  
-</div>
-</form>
-<script type="text/javascript">
-function usePage(frm,nm){
-for (var i_tem = 0, bobs=frm.elements; i_tem < bobs.length; i_tem++)
-if(bobs[i_tem].name==nm&&bobs[i_tem].checked)
-frm.action=bobs[i_tem].value;
-}
-</script>
+    </div>
 {% endblock %}
