--- a/app/views/caseaccess/pages/results.html
+++ b/app/views/caseaccess/pages/results.html
@@ -1,5 +1,5 @@
 {% if  data.usertype == 'judiciary'   %}
-    {% extends "../layoutjudicial.html" %}
+    {% extends "../layoutjudicial-c.html" %}
 {% else %}
     {% extends "../layoutstaff.html" %}
 {% endif %}
@@ -31,7 +31,7 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Open</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/caseaccess/pages/PA-00321-2018">Challenged access</a></td>
             </tr>
-  
+
         </tbody>
     </table>
 {% endblock %}
