--- a/app/views/caseaccess/pages/PA-00467-2017-request.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-request.html
@@ -42,7 +42,7 @@ Case details
       items: [
         {
           value: "email",
-          text: "Reason A"
+          text: "Reviewer"
         },
         {
           value: "phone",
