--- a/app/views/caseaccess/pages/PA-00467-2017-trr-case.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trr-case.html
@@ -34,24 +34,15 @@ Case details
   items: [
     {
       value: "email",
-      text: "Reason A",
-      hint: {
-        text: "More information needed please contact me to discuss further."
-      }
+      text: "Reason A (Example: More information needed). Please contact me to discuss further."
     },
     {
       value: "phone",
-      text: "Reason B",
-      hint: {
-        text: "More information needed please contact me to discuss further."
-      }
+      text: "Reason B. Please contact me to discuss further."
     },
     {
       value: "email",
-      text: "Reason C",
-      hint: {
-        text: "More information needed please contact me to discuss further."
-      }
+      text: "Reason C. Please contact me to discuss further."
     },
 
     {
@@ -59,10 +50,7 @@ Case details
 },
     {
       value: "other",
-      text: "Other",
-      hint: {
-        text: "More information needed please contact me to discuss further."
-      },
+      text: "Other. Please contact me to discuss further.",
       conditional: {
         html: textHtml
       }
