--- a/app/views/caseaccess/pages/available-tasks-s2o.html
+++ b/app/views/caseaccess/pages/available-tasks-s2o.html
@@ -36,6 +36,11 @@ My work
                 My cases
               </a>
             </li>
+            <li class="hmcts-sub-navigation__item">
+              <a class="hmcts-sub-navigation__link" href="#">
+                My cases
+              </a>
+            </li>
           </ul>
         </nav>
         <p class="govuk-body">Displaying <strong>3</strong> of <strong>3</strong> tasks</p>
