--- a/app/views/caseaccess/pages/mycases-old.html
+++ b/app/views/caseaccess/pages/mycases-old.html
@@ -91,7 +91,7 @@ My work
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Mr Peter Williams Vs Mrs Janet Richards</a></td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Adoption</td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific</td>
+                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Mar 2021</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Apr 2021 </td>
                       <td class="govuk-table__cell"><a href="#" class="right_">Go to case</a></td>
@@ -100,7 +100,7 @@ My work
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Mrs Mary Hunter-bridge Vs Mrs Caroline Manning</a></td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Family</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Care and supervision</td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Challenged</td>
+                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">22 Mar 2021</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">22 Mar 2021 </td>
                       <td class="govuk-table__cell"><a href="#" class="right_m">Go to case</a></td>
