--- a/app/views/caseaccess/pages/mycases-p.html
+++ b/app/views/caseaccess/pages/mycases-p.html
@@ -22,22 +22,28 @@ My work
         <nav class="hmcts-sub-navigation">
           <ul class="hmcts-sub-navigation__list">
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" href="mywork">
+              <a class="hmcts-sub-navigation__link" href="#">
                 My tasks
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" href="available-tasks">
+              <a class="hmcts-sub-navigation__link" href="#">
                 Available tasks
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" aria-current="page"  href="mycases">
+              <a class="hmcts-sub-navigation__link" aria-current="page"  href="mycases-p">
                 My cases
+              </a>
+            </li>
+            <li class="hmcts-sub-navigation__item">
+              <a class="hmcts-sub-navigation__link"  href="myaccess-p">
+                My access
               </a>
             </li>
           </ul>
         </nav>
+        <p class="govuk-body">Displaying <strong>2</strong> of <strong>2</strong> cases </p>
         <table class="govuk-table ">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
@@ -74,16 +80,7 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                   <!--   <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
                     <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-                </tr>
-                  <tr class="govuk-table__row">
-                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Amelia Chu</td>
-                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
-                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific</td>
-                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Pending</td>
-                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                  <td class="govuk-table__cell"></td>
-                  </tr>
+
               </tbody>
           </table>
 {% endblock %}
