--- a/app/views/caseaccess/pages/mycases-ro.html
+++ b/app/views/caseaccess/pages/mycases-ro.html
@@ -95,7 +95,7 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="PA-00321-2018-a">Robert Saddlebrook</a></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Challenged</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Mar 2021</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Apr 2021 </td>
                     <td class="govuk-table__cell"><a href="#" class="right_">Go to case</a></td>
