--- a/app/views/caseaccess/layoutstaff-c.html
+++ b/app/views/caseaccess/layoutstaff-c.html
@@ -55,7 +55,7 @@
           <div class="hmcts-header__container" style="width: 812px;">
 
               <div class="hmcts-header__logo">
-                  <a class="hmcts-header__link" href="#" aria-current="page"></a>
+                  <a class="hmcts-header__link" href="" aria-current="page"></a>
               </div>
 
               <div class="hmcts-header__content">
@@ -99,7 +99,7 @@
               },
               {
               text: 'Search cases',
-              href: getUrl('/pages/search'),
+              href: getUrl('/pages/search-c'),
               active: pageId == '#'
               }
               ]
@@ -116,7 +116,7 @@
           <div style="display: flex;flex-direction: row; ">
               <p style="color: white; margin-top:8px; margin-bottom: 0px;">Case reference:  &nbsp;</p>
               <input class="govuk-input" id="hmctsref" name="hmctsref" type="text" spellcheck="false" style="width:219px;">
-              <a href="/caseaccess/pages/PA-00467-2017" role="button" draggable="false" class="govuk-button govuk-button--secondary"
+              <a href="/caseaccess/pages/PA-00321-2018" role="button" draggable="false" class="govuk-button govuk-button--secondary"
                  style="height:36px; margin-left: 4px; margin-top: 2px;  margin-bottom: 0px;">
                   Find
               </a>
