--- a/app/views/caseaccess/pages/PA-00321-2018-request.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-request.html
@@ -1,7 +1,7 @@
 {% if  data.usertype == 'judiciary'   %}
     {% extends "../layoutjudicial-c.html" %}
 {% else %}
-    {% extends "../layoutstaff.html" %}
+    {% extends "../layoutstaff-c.html" %}
 {% endif %}
 {% block pageTitle %}
 Case details
@@ -42,7 +42,7 @@ Case details
       items: [
         {
           value: "email",
-          text: "Reason A"
+          text: "Reviewer"
         },
         {
           value: "phone",
