--- a/app/views/caseaccess/pages/PA-00321-2018.html
+++ b/app/views/caseaccess/pages/PA-00321-2018.html
@@ -1,7 +1,7 @@
 {% if  data.usertype == 'judiciary'   %}
 {% extends "../layoutjudicial-c.html" %}
 {% else %}
-{% extends "../layoutstaff.html" %}
+{% extends "../layoutstaff-c.html" %}
 {% endif %}
 {% block pageTitle %}
 Case details
