--- a/app/views/caseaccess/pages/PA-00467-2017-ara.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-ara.html
@@ -123,7 +123,7 @@ Case details
             </tr>
             <tr class="govuk-table__row">
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"> Judge Randel-Combeswardly</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific access</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Manchester</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Mar 2021</td>
