--- a/app/views/caseaccess/pages/PA-00467-2017-confirmation.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-confirmation.html
@@ -30,7 +30,7 @@ Case details
       <p class="govuk-body">
         All access requests are logged for auiting purposes.
       </p>
-      <p>The case file will appear under <a href="mywork" class="govuk-link">My work</a> tab.
+      <p>The case file will appear under the <a href="myaccess-p" class="govuk-link">My access</a> tab.
     </div>
   </div>
 {% endblock %}
