--- a/app/views/caseaccess/pages/myaccess-p.html
+++ b/app/views/caseaccess/pages/myaccess-p.html
@@ -32,18 +32,18 @@ My work
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" aria-current="page"  href="mycases-r">
+              <a class="hmcts-sub-navigation__link"  href="mycases-p">
                 My cases <!-- <span class="xui-alert-link__number"> 1 </span> -->
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link"  href="myaccess-r">
+              <a class="hmcts-sub-navigation__link" aria-current="page"  href="myaccess-p">
                 My access <!-- <span class="xui-alert-link__number"> 1 </span> -->
               </a>
             </li>
           </ul>
         </nav>
-        <p class="govuk-body">Displaying <strong>2</strong> of <strong>2</strong> cases </p>
+        <p class="govuk-body">Displaying <strong>1</strong> of <strong>1</strong> cases </p>
         <table class="govuk-table ">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
@@ -51,7 +51,8 @@ My work
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Jurisdiction</button></th>
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 140px;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
                 <!--  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none""></th> -->
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case role</button></th>
+  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">Case role</button></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Access</button></th>
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">End</button></th>
                 <!--     <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 130px;" aria-sort="none"><button type="button" data-index="1">Hearing date</button></th> -->
@@ -59,29 +60,17 @@ My work
               </tr>
             </thead>
             <tbody class="govuk-table__body">
-                <tr class="govuk-table__row">
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Patti Jo</a></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-                  <!--  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Leadership Judge</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">03 Oct 2020 </td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">03 May 2021 </td>
-                  <!--  <td class="govuk-table__cell">18 Apr 2021</td> -->
-                    <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-                </tr>
-                <tr class="govuk-table__row">
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Hudson Remi</a></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">HR</td>
-                    <!--  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hearing Judge</td>
-                    <td class="govuk-table__cell">09 Nov 2020  </td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                  <!--   <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
-                    <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+              <tr class="govuk-table__row">
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Amelia Chu</td>
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific</td>
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Pending</td>
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+              <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="myaccess-po" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+              </tr>
 
-              
               </tbody>
           </table>
 
