--- a/app/views/caseaccess/pages/myaccess-pod.html
+++ b/app/views/caseaccess/pages/myaccess-pod.html
@@ -1,3 +1,4 @@
+
 {% if  data.usertype == 'judiciary'   %}
     {% extends "../layoutjudicial.html" %}
 {% else %}
@@ -6,7 +7,9 @@
 {% block pageTitle %}
 Case details
 {% endblock %}
-
+{% block beforeContent %}
+<a href="/caseaccess/pages/myaccess-po" class="govuk-back-link">Back</a>
+{% endblock %}
 {% block content %}
 
 <!-- <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
@@ -91,76 +94,42 @@ Case details
       <div > -->
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-          <h2 class="govuk-heading-l  govuk-!-margin-bottom-2">Review specific access request</h2>
-          <p></p>
+          <h1 class="govuk-heading-l  govuk-!-margin-bottom-2">Delete access request</h1>
+            <!-- <h2 class="govuk-heading-m">Review your access request and decision</h2> -->
+
+          <p class="govuk-body">Check the details below carefully.</p>
           <table class="govuk-table">
             <tbody class="govuk-table__body">
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Case name</th>
                 <td class="govuk-table__cell">Amelia Chu</td>
               </tr>
+<!--
               <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Case reference</th>
-                <td class="govuk-table__cell">PA/00467/2017</td>
-              </tr>
-              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Request from</th>
-                <td class="govuk-table__cell">Judge Randel-Combeswardly</td>
-              </tr>
+                <th scope="row" class="govuk-table__header" style="width: 220px;">Role requested</th>
+                <td class="govuk-table__cell">(I think this this covered by Reason)</td>
+              </tr> -->
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Date submitted</th>
-                <td class="govuk-table__cell">DD/MM/YYYY</td>
+                <td class="govuk-table__cell">DD/Month/YYYY</td>
               </tr>
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Reason for access</th>
-                <td class="govuk-table__cell">
-Reviewer          </tr>
+                <td class="govuk-table__cell">Reason A (Example: Reviewer)<br>I need to gain access to support the case I'm deciding.</td>
+              </tr>
+
             </tbody>
           </table>
         </div>
       </div>
-  <form action="#" method="post" onsubmit="usePage(this, 'bob');">
-    <div class="govuk-form-group">
-      <fieldset class="govuk-fieldset">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-          <h1 class="govuk-fieldset__heading">
-            What would you like to do with this request?
-          </h1>
-        </legend>
-        <div class="govuk-radios">
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live" name="bob" type="radio" value="/caseaccess/pages/PA-00467-2017-tra">
-            <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-              Approve request
-            </label>
-          </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="/caseaccess/pages/PA-00467-2017-trr">
-            <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-              Reject request
-            </label>
-          </div>
-        </div>
-      </fieldset>
-    </div>
   <div class="govuk-button-group">
   {{ govukButton({
-    text: "Continue",
+    text: "Delete",
     classes: "govuk-!-margin-right-3"
   }) }}
-  {{ govukButton({
-    text: "Cancel and unassign task",
-    href: "/caseaccess/pages/available-tasks-s2o",
-    classes: "govuk-button--secondary"
-  }) }}
+
 
 </div>
-</form>
-<script type="text/javascript">
-function usePage(frm,nm){
-for (var i_tem = 0, bobs=frm.elements; i_tem < bobs.length; i_tem++)
-if(bobs[i_tem].name==nm&&bobs[i_tem].checked)
-frm.action=bobs[i_tem].value;
-}
-</script>
+
+
 {% endblock %}
