--- a/app/views/caseaccess/pages/myaccess-tcro.html
+++ b/app/views/caseaccess/pages/myaccess-tcro.html
@@ -21,23 +21,28 @@ My work
         <nav class="hmcts-sub-navigation">
           <ul class="hmcts-sub-navigation__list">
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" href="mywork">
+              <a class="hmcts-sub-navigation__link" href="#">
                 My tasks
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" href="available-tasks">
+              <a class="hmcts-sub-navigation__link" href="#">
                 Available tasks
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" aria-current="page"  href="mycases">
-                My cases <span class="xui-alert-link__number">1 </span>
+              <a class="hmcts-sub-navigation__link" href="#">
+                My cases
+              </a>
+            </li>
+            <li class="hmcts-sub-navigation__item">
+              <a class="hmcts-sub-navigation__link" aria-current="page"  href="#">
+                My access <span class="xui-alert-link__number">1 </span>
               </a>
             </li>
           </ul>
         </nav>
-        <p class="govuk-body">Displaying <strong>3</strong> of <strong>3</strong> cases </p>
+        <p class="govuk-body">Displaying <strong>1</strong> of <strong>1</strong> cases </p>
         <table class="govuk-table ">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
@@ -45,7 +50,8 @@ My work
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Jurisdiction</button></th>
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 140px;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
                 <!--  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none""></th> -->
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case role</button></th>
+  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">Case role</button></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Access</button></th>
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">End</button></th>
                 <!--     <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 130px;" aria-sort="none"><button type="button" data-index="1">Hearing date</button></th> -->
@@ -53,36 +59,19 @@ My work
               </tr>
             </thead>
             <tbody class="govuk-table__body">
-                <tr class="govuk-table__row">
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Patti Jo</a></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-                  <!--  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Leadership Judge</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">03 Oct 2020 </td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">03 May 2021 </td>
-                  <!--  <td class="govuk-table__cell">18 Apr 2021</td> -->
-                    <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-                </tr>
-                <tr class="govuk-table__row">
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Hudson Remi</a></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">HR</td>
-                    <!--  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hearing Judge</td>
-                    <td class="govuk-table__cell">09 Nov 2020  </td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                  <!--   <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
-                    <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-                </tr>
+
                   <tr class="govuk-table__row">
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="/caseaccess/pages/PA-00467-2017-atc"><strong>Amelia Chu</strong></a></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Amelia Chu</strong></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Immigration and Asylum</strong></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Protection</strong></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Reviewer</strong></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>14 Mar 2021</strong></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>14 Mar 2021</strong></td>
-                    <td class="govuk-table__cell"><a href="/caseaccess/pages/PA-00467-2017-atc">Goto case</a></td>
+                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Rejected</strong></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                    <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="myaccess-tcr" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
+                  </tr>
+                  <tr class="govuk-table__row">
+                      <td colspan="8" class="govuk-table__cell right"><a href="/caseaccess/pages/myaccess-tcrd" class="right_l">Delete request</a><a href="myaccess-tcrvd" class="right_l">View access request</a></td>
                   </tr>
               </tbody>
           </table>
